UF-11184: Add API-endpoint and clean up API
